# ComfyUI-Qwen3-ASR-Moja_kopia

./: .gitignore  README.md  __init__.py  pyproject.toml  qwen3_asr_nodes.py  requirements.txt
js/docs/: Qwen3ASRTranscriber.md  Qwen3ForcedAlignerConfig.md
